# flatmate-bill-generator

./: .env  .gitignore  README.md  flat.py  main.py  pdfgenerate.py  pyproject.toml
